# learn_qt

./: .gitignore  CMakeLists.txt  README.md  way_of_useing_qt.md
Sources/: mainwindow.cpp
Sources/Forms/: mainwindow.ui
Sources/Headers/: mainwindow.h
Sources/Resources/: resources.qrc
src/: LearnNetworkWidget.cpp  LoginWidget.cpp  MainWindow.cpp  TcpClientWidget.cpp  TcpServerWidget.cpp  UtilTools.cpp  learnnetworkwidget.cpp  loginwidget.cpp  main.cpp  mainwindow.cpp  tcpclient.cpp  tcpserver.cpp
src/Forms/: TcpClientWidget.ui  TcpServerWidget.ui  learnnetworkwidget.ui  loginwidget.ui  mainwindow.ui  tcpclient.ui  tcpserver.ui
src/Headers/: LearnNetworkWidget.h  LoginWidget.h  MainWindow.h  TcpClientWidget.h  TcpServerWidget.h  UtilTools.h  learnnetworkwidget.h  loginwidget.h  mainwindow.h  tcpclient.h  tcpserver.h
src/res/: res.qrc
